# NetOpsBench-NetX

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs-pages.yml  test.yml
docs/: .npmrc  STRUCTURE.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
docs/content/docs/: index.mdx  meta.json  quickstart.mdx
docs/src/app/: globals.css  layout.tsx  not-found.tsx  page.module.css  page.tsx
docs/src/components/: mdx.tsx
docs/src/lib/: base-path.ts  layout.shared.tsx  source.ts
examples/: 01_run_scenario.py  02_run_suite.py  03_run_scale_benchmark.py  04_custom_faults.py  05_manual_runtime.py  06_llm_fault_type_judge.py  README.md  _common.py
examples/agents/: README.md  __init__.py
examples/agents/minimal_deepagent/: README.md  __init__.py  agent.py  prompts.py  schema.py
examples/faults/: README.md
examples/faults/custom_fault_pack/: __init__.py  custom_fault.py  scenario.yaml
netopsbench/: __init__.py  config.py  logging_utils.py
netopsbench/agents/: __init__.py  _trace_utils.py  base.py  tracing.py
netopsbench/cli/: __init__.py  main.py  trace.py
netopsbench/evaluator/: __init__.py  fault_type_judge.py  scorer.py
netopsbench/models/: __init__.py  profiles.py  runtime.py  topology.py
netopsbench/platform/: __init__.py
netopsbench/platform/faults/: __init__.py  builtin_specs.py  context.py  injector.py  models.py  scenario_execution.py  specs.py
netopsbench/platform/observability/: __init__.py  bgp_collector.py  bgp_parser.py  influxdb.py  lifecycle.py  telegraf.py  validation.py
netopsbench/sdk/: __init__.py  agents.py  artifacts.py  core.py  evaluators.py  exceptions.py  faults.py  mcp.py  reports.py  runtimes.py  scenarios.py  sessions.py  types.py
observability/: docker-compose.yaml  telegraf.conf.template
scenarios/: README.md
scenarios/specs/: fault_campaign.yaml
scripts/: plot_results.py  run_all_benchmarks.sh  serve_static_export.mjs
scripts/lib/: find_python.sh
scripts/observability/: start_observability_core.sh  start_worker_telegraf.sh
scripts/runtime/: deploy.sh  deploy_worker.sh  run_bgp_collector.py  run_pingmesh_agent.py  teardown.sh  teardown_worker.sh
scripts/toolkit/: analyze_langsmith_history.py  run_fastmcp_server.py
tests/: __init__.py  conftest.py  test_agent_base_contract.py  test_agent_handle_lifecycle.py  test_api_agents.py  test_api_artifacts.py  test_api_evaluators.py  test_api_faults.py  test_api_mcp.py  test_api_platform.py  test_api_runtimes.py  test_api_scenarios.py  test_api_sessions.py  test_apply_configs.py  test_architecture.py  test_bgp_collector.py  test_bgp_observability.py  test_canonical_models.py  test_command_common.py  test_commands_cli.py  test_e2e.py  test_e2e_real.py  test_episode_runner.py  test_example_agents.py  test_fat_tree_topology.py  test_fault_registry.py  test_fault_type_judge.py  test_negative_sample_scenarios.py  test_observability_validation.py  test_pingmesh_deploy.py  test_pingmesh_time_scope.py  test_pingmesh_udp_probe.py  test_platform_fault_active_faults.py  test_platform_toolkit_fastmcp.py  test_reports_pretty_print.py  test_route_parser_and_static_route.py  test_run_handle_raise_on_failure.py  test_runtime_agent_input_contract.py  test_runtime_config_consistency.py  test_runtime_xs_smoke_real.py  (+14 more)
(+170 files in other folders)
